--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "firebase": "^7.18.0",
     "vue": "^2.6.11",
+    "vue-audio-recorder": "^3.0.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
